Add new template pages and Fix

--- a/styles/layout/layout.scss
+++ b/styles/layout/layout.scss
@@ -21,4 +21,5 @@
 @import './templates/_freya';
 @import './templates/_verona';
 @import './templates/_diamond';
+@import './templates/_avalon';
 @import './templates/_templates';
