--- a/styles/layout/templates/_ultima.scss
+++ b/styles/layout/templates/_ultima.scss
@@ -11,6 +11,11 @@
                 z-index: 6;
             }
 
+            &-dashboard1,
+            &-dashboard2{
+                border-radius: 0.42857rem;
+            }
+
         }
     }
 
