--- a/styles/layout/layout.scss
+++ b/styles/layout/layout.scss
@@ -22,4 +22,8 @@
 @import './templates/_verona';
 @import './templates/_diamond';
 @import './templates/_avalon';
+@import './templates/_poseidon';
+@import './templates/_babylon';
+@import './templates/_california';
+@import './templates/_sakai';
 @import './templates/_templates';
