Add new template pages

--- a/styles/layout/layout.scss
+++ b/styles/layout/layout.scss
@@ -26,4 +26,5 @@
 @import './templates/_babylon';
 @import './templates/_california';
 @import './templates/_sakai';
+@import './templates/_roma';
 @import './templates/_templates';
