--- a/styles/layout/templates/_california.scss
+++ b/styles/layout/templates/_california.scss
@@ -9,6 +9,10 @@
                 left: -8.65rem;
                 z-index: 6;
             }
+            &-dashboard1,
+            &-dashboard2{
+                width: 40rem;
+            }
         }
     }
 
