--- a/styles/layout/templates/_roma.scss
+++ b/styles/layout/templates/_roma.scss
@@ -1,30 +1,42 @@
-.poseidon {
+.roma {
     .template {
         &-hero {
             &-pattern {
-                width: 102.3125rem;
+                width: 56rem;
                 height: auto;
                 position: absolute;
-                bottom: 0rem;
-                left: -26rem;
+                bottom: -0.5rem;
+                left: -4.06rem;
                 z-index: 6;
             }
             &-dashboard1,
             &-dashboard2{
-                width: 45rem;
+                width: 42rem;
+            }
+        }
+        &-separator {
+            &-icon {
+                width: 6rem;
+                height: 3.2rem; 
+                border-radius: 99px;
+                svg{
+                    width: 4rem;
+                    height: 4rem;
+                }
             }
         }
     }
 
 }
 @media only screen and (max-width: 1200px) {
-    .poseidon {
+    .roma {
         .template{
             &-hero {
                 &-pattern {
+                    width: 68rem;
                     height: auto;
-                    bottom: 0rem;
-                    left: -34rem;
+                    bottom: -8rem;
+                    left: -12rem;
                 }
             }
         }
@@ -32,13 +44,14 @@
     }
 }
 @media only screen and (max-width: 768px) {
-    .poseidon {
+    .roma {
         .template{
             &-hero {
                 &-pattern {
+                    width: 88rem;
                     height: auto;
-                    bottom: 21rem;
-                    left: -35rem;
+                    bottom: 0rem;
+                    left: -16rem;
                 }
             }
         }
