--- a/styles/layout/templates/_sakai.scss
+++ b/styles/layout/templates/_sakai.scss
@@ -9,6 +9,10 @@
                 left: -1rem;
                 z-index: 6;
             }
+            &-dashboard1,
+            &-dashboard2{
+                width: 42rem;
+            }
         }
         &-features-horizontal-card{
             width: 30rem;
