--- a/styles/layout/templates/_ultima.scss
+++ b/styles/layout/templates/_ultima.scss
@@ -3,12 +3,13 @@
         &-hero {
 
             &-pattern {
-                width: 60rem;
+                width: 80rem;
                 height: auto;
                 position: absolute;
-                bottom: 0;
-                left: 0;
+                bottom: -26rem;
+                left: -22.5rem;
                 z-index: 6;
+                mix-blend-mode: overlay;
             }
 
             &-dashboard1,
@@ -27,8 +28,9 @@
             &-hero {
 
                 &-pattern {
-                    width: 80rem;
-                    left: -5rem;
+                    width: 90rem;
+                    left: -25rem;
+                    bottom: -10rem;
                 }
             }
         }
